# SWE-AGILE

./: .gitignore  README.md  constraints.txt  init_env.sh
R2E-Gym/: pyproject.toml
R2E-Gym/src/r2egym/agenthub/action/: action.py
R2E-Gym/src/r2egym/agenthub/config/r2egym/: edit_fn_calling.yaml
R2E-Gym/src/r2egym/agenthub/environment/: env.py
R2E-Gym/src/r2egym/agenthub/runtime/: REFACTORING_GUIDE.md  docker.py  docker_.py  mswebench_evaluator.py
R2E-Gym/src/r2egym/agenthub/tools/: __init__.py  execute_bash.py  file_editor.py
R2E-Gym/src/r2egym/agenthub/tools/mswemyagent/: __init__.py  execute_bash.py  file_editor.py  glob_file.py  search.py
R2E-Gym/src/r2egym/agenthub/tools/r2egym/: file_editor.py
R2E-Gym/src/r2egym/agenthub/tools/swedev/: __init__.py  finish.py  str_replace_editor.py
R2E-Gym/src/r2egym/agenthub/utils/: log.py
data_process/: batch_merge_sft_traj.py  convert_pt_to_json.py  count_repeating_and_success_statics.py  fillback.py  filter_traj.py  merge_verl_datasets.py  parquet2json.py  pt2parquet.py  run_pt2parquet_and_stats.sh  to_training_data_verl.py  traj_statics.py
rllm/: pyproject.toml  sitecustomize.py
rllm/examples/swe/: rl_qwen3_14B_dapo.sh  rl_qwen3_8B_dapo.sh  rl_qwen3_8B_dapo_swedev.sh  rl_qwen3_8B_dapo_wocpr.sh  rl_qwen3_8B_deepswe_setting.sh
rllm/rllm/agents/: agent.py  swe_agent.py  swe_agent_ok.py  system_prompts.py  utils.py
rllm/rllm/engine/: agent_execution_engine.py
rllm/rllm/parser/: chat_template_parser.py  tool_parser.py
rllm/rllm/registry/: dataset_registry.json
rllm/rllm/trainer/: agent_sft_trainer.py  (+1 more)
(+284 files in other folders)
